fix: changed overflow to main-cont class

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,8 +16,11 @@ body{
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
-    overflow-x: hidden;
   }
+  
+.main-cont{
+    overflow-x: hidden;
+}
 
 /* ****************          NAVBAR STYLES         ********************** */
 .navbar-toggler-icon{
